password reset and upload images functionality

--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -12,7 +12,7 @@
         <h1>OutFit says...</h1>
         hello world! <strong>{{ boldmessage }}</strong><br />
         <a href="/rango/about/">About</a><br />
-        <img src="{% static "images/myles.jpg" %}" alt="Picture of Myles Quote" /> <!-- New line -->
+        <!-- New line -->
     </body>
 
 </html>
