--- a/outfit/templates/password_reset/recovery_done.html
+++ b/outfit/templates/password_reset/recovery_done.html
@@ -3,5 +3,5 @@
 {% block title %}{% trans "New password set" %}{% endblock %}
 
 {% block content %}
-	<p>{% trans "Your password has successfully been reset. You can use it right now on the login page." %}</p>
+	<p class='text-success'>{% trans "Your password has successfully been reset. You can use it right now on the login page." %}</p>
 {% endblock %}
