--- a/outfit/templates/password_reset/reset_sent.html
+++ b/outfit/templates/password_reset/reset_sent.html
@@ -4,5 +4,10 @@
 {% block title %}{% trans "Password recovery sent" %}{% endblock %}
 
 {% block content %}
-	<p>{% blocktrans with ago=timestamp|timesince %}An email was sent to <strong>{{ email }}</strong> {{ ago }} ago. Use the link in it to set a new password.{% endblocktrans %}</p>
+    <div class='col-md-offset-2'>
+        <p class='text-success' >{% blocktrans with ago=timestamp|timesince %}
+        An email <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> was sent to <strong>{{ email }}</strong>
+        {{ ago }} ago. Use the link in it to set a new password.{% endblocktrans %}</p>
+    </div>
+	
 {% endblock %}
