--- a/outfit/templates/user_auth/add_user_activity.html
+++ b/outfit/templates/user_auth/add_user_activity.html
@@ -7,21 +7,28 @@
         <b>{{ username }}</b><br/>
         <ul class="messages success">
         {% for message in messages %}
-        <li {% if message.tags %} class="{{ message.tags }} text-success"{% endif %}>{{ message }}</li>
+        <li {% if message.tags %} class="{{ message.tags }} text-success"{% endif %}>
+            <span class="glyphicon glyphicon-info-sign" aria-hidden="true"> {{ message }}</span>
+            </li>
         {% endfor %}
         </ul>
     {% endif %}
 
-<h3 class='text-info'>Add Activity</h3>
-<form role="form"  method="post" action="/auth/add_user_activity/" >
-<legend>Activity Details</legend>
-<fieldset>
-{% csrf_token %}
+<div class='row'>
+    <div class='col-md-offset-3 col-md-6'>
+        <h3 class='text-info'>Add Activity</h3>
+        <form role="form"  method="post" action="/auth/add_user_activity/" >
+        <fieldset>
+        {% csrf_token %}
+        
+        {% load crispy_forms_tags %}
+        {% crispy activitydetails %}
+        </fieldset>
+        <button type="submit" class="btn btn-default">Add</button>
+        </form>
+    </div>
+    
+</div>
 
-{% load crispy_forms_tags %}
-{% crispy activitydetails %}
-</fieldset>
-<button type="submit" class="btn btn-default">Add</button>
-</form>
 {% endif %}
 {% endblock %}
