--- a/outfit/templates/user_auth/registeration.html
+++ b/outfit/templates/user_auth/registeration.html
@@ -1,24 +1,16 @@
-
 {% extends "user_auth/base.html" %}
-
-
+{% load bootstrap_toolkit %}
 {% block body_block %}
-{% if registered %}
-                 
-<h1>Welcome to Outfit ES</h1>
-{% else %}
-<div class='col-md-6 col-md-offset-2'>          
-<form role="form"  method="post" action="/auth/register/">
-<legend>Registration Form</legend>
-<fieldset>
-{% csrf_token %}
+                <div class='col-md-6 col-md-offset-2'>
+                                <form role="form" class="form-horizontal" method="post" action="/auth/register/">
+                                <legend>Registration Form</legend>
+                                <fieldset>
+                                {% csrf_token %}
+                                {% load crispy_forms_tags %}
+                                {% crispy userform %}
+                                </fieldset>
+                                <button type="submit" class="btn btn-default">Submit</button>
+                                </form>
+                </div>  
 
-{% load crispy_forms_tags %}
-{% crispy userform %}
-</fieldset>
-<button type="submit" class="btn btn-default">Submit</button>
-</form>
-</div>  
-
-{% endif %}
 {% endblock %}
