--- a/outfit/templates/user_auth/userdetails.html
+++ b/outfit/templates/user_auth/userdetails.html
@@ -1,27 +1,33 @@
 {% extends "user_auth/base.html" %}
-
+{% load bootstrap_toolkit %}
 {% block body_block %}
 
 {% if user.is_authenticated %}
     {% if messages %}
-        <b>{{ username }}</b><br/>
         <ul class="messages">
-        {% for message in messages %}
-        <li {% if message.tags %} class="{{ message.tags }} infoMessage "{% endif %}>{{ message }}</li>
-        {% endfor %}
+            {% for message in messages %}
+            <p {% if message.tags %} class="{{ message.tags }} text-success"{% endif %}>
+                <span class="glyphicon glyphicon-info-sign" aria-hidden="true">
+                {{ message }}
+            </p>
+            {% endfor %}
         </ul>
     {% endif %}
 
-<p>Complete the user details</p>
-<form role="form"  method="post" action="/auth/userdetails/" enctype="multipart/form-data">
-<legend>User additional Details</legend>
-<fieldset>
-{% csrf_token %}
+<div class="row">
+    <div class="col-md-offset-3 col-md-6">
+        <h3><u>Complete the user details</u></h3>
+        <form role="form"  method="post" action="/auth/userdetails/" enctype="multipart/form-data">
+            <fieldset>
+                {% csrf_token %}
+                {% load crispy_forms_tags %}
+                {% crispy userdetails%}
+            </fieldset>
+            <button type="submit" class="btn btn-default">Complete</button>
+        </form>
+        
+    </div>
+</div>
 
-{% load crispy_forms_tags %}
-{% crispy userdetails %}
-</fieldset>
-<button type="submit" class="btn btn-default">Complete</button>
-</form>
 {% endif %}
 {% endblock %}
