added a login link in recovery_done template

--- a/outfit/templates/password_reset/recovery_done.html
+++ b/outfit/templates/password_reset/recovery_done.html
@@ -3,5 +3,7 @@
 {% block title %}{% trans "New password set" %}{% endblock %}
 
 {% block content %}
-	<p class='text-success'>{% trans "Your password has successfully been reset. You can use it right now on the login page." %}</p>
+	<p class='text-success'>Your password has successfully been reset. You can use it right now on
+        the login page.</p>
+        <a href="/auth/login/"> Login</a>
 {% endblock %}
