added date/time picker on date and time fields

--- a/outfit/templates/user_auth/add_user_activity.html
+++ b/outfit/templates/user_auth/add_user_activity.html
@@ -1,7 +1,8 @@
 {% extends "user_auth/base.html" %}
 
-{% block body_block %}
+{%block link%} {{ activitydetails.media }} {%endblock%}
 
+{% block body_block %}
 {% if user.is_authenticated %}
     {% if messages %}
         <b>{{ username }}</b><br/>
