--- a/outfit/templates/user_auth/user_activity.html
+++ b/outfit/templates/user_auth/user_activity.html
@@ -33,7 +33,7 @@
                         <td>{{item.event_date}} </td>
                         <td>{{item.start_time}} </td>
                         <td>{{item.end_time}} </td>
-                        <td> <a href="/auth/delete_activity/{{item.activity_id}}/delete/">
+                        <td> <a href="/auth/delete_activity/{{item.activity_id}}/delete/" class="text-danger">
                             <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                         </a> </td>
                     </tr>
