--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -10,21 +10,22 @@
     <link rel="icon" href="{% static 'images/favicon.ico' %}">
 
     <title>Outfit{% block title %}{% endblock %}</title>
-
+    <!--Jquery-->
+    <script src="{{STATIC_URL}}js/jquery.min.js"></script>
+    <!--CSS links-->
     <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/dashboard.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/main.css" rel="stylesheet">
+    <!--javascript/jquery links-->
+    <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+    <!--form media link-->
+    {%block link%}{%endblock%}
 
     <!--[if lt IE 9]>
     <!--
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script type="text/javascript">
-    jQuery(document).ready(function(){
-    jQuery('#datetimepicker').datepicker();
-})
-</script>
   </head>
 
   <body>
@@ -72,8 +73,10 @@
                 {% endblock %}
                 {% if user.is_authenticated %}
                 <h4>Profile</h3>
+                <a href="{% url 'trya' %}">
                 <p class='text-info' >{{ user.username|capfirst }}</p>  <br/>
                 <img src="{{ userdetails.profile_picture.url }}"  class='img-thumbnail img-circle' alt="{{user.username}}"/>
+                </a>
                 <br/>
                 <h4>ES Links</h4>
                 <a href="/admin/">AdminLogin</a> <br />
@@ -91,32 +94,46 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
            <div>
                 {% block body_block %}
-              <!--  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators --
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
                     <ol class="carousel-indicators">
                       <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                       <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                       <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                     </ol>
                   
-                    <!-- Wrapper for slides --
+                    <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                       <div class="item active">
-                        <img src="..." alt="...">
+                        <img src="{% static 'images/jumper.jpg' %}" alt="...">
                         <div class="carousel-caption">
-                          ...
+                          Jumper
                         </div>
                       </div>
                       <div class="item">
-                        <img src="..." alt="...">
+                        <img src="{% static 'images/daphnea.jpg' %}" alt="...">
                         <div class="carousel-caption">
-                          ...
+                        Brouse
                         </div>
                       </div>
-                      ...
+                      
+                      <div class="item">
+                        <img src="{% static 'images/daphnea1.jpg' %}" alt="...">
+                        <div class="carousel-caption">
+                        Daphnea
+                        </div>
+                      </div>
+                      
+                      <div class="item">
+                        <img src="{% static 'images/chefammel.jpg' %}" alt="...">
+                        <div class="carousel-caption">
+                        Daphnea
+                        </div>
+                      </div>
+                    
                     </div>
                   
-                    <!-- Controls --
+                    <!-- Controls -->
                     <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
                       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
@@ -125,7 +142,7 @@
                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
-           </div>-->
+           </div>
                 
                 {% endblock %}
             </div>
@@ -136,10 +153,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{STATIC_URL}}js/jquery.min.js"></script>
-    <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
+   
     <script src="{{STATIC_URL}}js/main.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <!-- <script src="{{STATIC_URL}}/js/ie10-viewport-bug-workaround.js"></script>-->
+   <!--<script src="{{STATIC_URL}}/js/ie10-viewport-bug-workaround.js"></script>-->
   </body>
 </html>
