--- a/outfit/templates/user_auth/dash.html
+++ b/outfit/templates/user_auth/dash.html
@@ -27,7 +27,7 @@
                 
             <img src="{{ cloth.cloth_image.url }}" class='img-rounded' alt="{{cloth.cloth_description}}" />
             </a>
-            <p> {{cloth.cloth_description }} </p>
+            <p class="text-center"> <strong><i> {{cloth.cloth_description }} </i> </strong> </p>
         
         </div>
         {% endfor %}
