--- a/outfit/templates/user_auth/userdetails.html
+++ b/outfit/templates/user_auth/userdetails.html
@@ -1,5 +1,8 @@
 {% extends "user_auth/base.html" %}
 {% load bootstrap_toolkit %}
+
+{%block link%} {{ userdetails.media }} {%endblock%}
+
 {% block body_block %}
 
 {% if user.is_authenticated %}
