--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -46,7 +46,7 @@
             {% if user.is_authenticated %}
             <li><a href="{% url 'closet_upload' %}">Closet Upload</a></li>
             <li><a href="{% url 'add_user_activity' %}">Add Activity</a></li>
-            <li><a href="{% url 'user_activities' %}">Activites</a></li>
+            <li><a href="{% url 'user_activities' %}">Activities</a></li>
            <li><a href="{% url 'trya' %}"> {{user.username}} </a></li>
            <li><a href="{% url 'logout' %}">Logout</a></li>
            <li><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
