--- a/outfit/templates/user_auth/login.html
+++ b/outfit/templates/user_auth/login.html
@@ -15,7 +15,7 @@
             <br />
             </div>
     
-            <input type="submit" class="btn btn-large" value="submit" />
+            <input type="submit" class="btn btn-large btn-success" value="Login" />
         </form>
     </div> 
 {% endblock %}
