--- a/outfit/templates/user_auth/add_user_activity.html
+++ b/outfit/templates/user_auth/add_user_activity.html
@@ -26,7 +26,7 @@
         {% load crispy_forms_tags %}
         {% crispy activitydetails %}
         </fieldset>
-        <button type="submit" class="btn btn-default">Add</button>
+        <button type="submit" class="btn btn-success">Add</button>
         </form>
     </div>
     
