--- a/outfit/templates/user_auth/closet_upload.html
+++ b/outfit/templates/user_auth/closet_upload.html
@@ -22,7 +22,7 @@
         {% load crispy_forms_tags %}
         {% crispy clothform %}
         </fieldset>
-        <button type="submit" class="btn btn-default">Complete</button>
+        <button type="submit" class="btn btn-success">Complete</button>
         </form> 
     </div>
 </div>
