--- a/outfit/templates/user_auth/registeration.html
+++ b/outfit/templates/user_auth/registeration.html
@@ -1,16 +1,15 @@
 {% extends "user_auth/base.html" %}
 {% load bootstrap_toolkit %}
 {% block body_block %}
-                <div class='col-md-6 col-md-offset-2'>
-                                <form role="form" class="form-horizontal" method="post" action="/auth/register/">
-                                <legend>Registration Form</legend>
-                                <fieldset>
+<div class='col-md-6 col-md-offset-2'>
+<form role="form" class="form-horizontal" method="post" action="/auth/register/">
+<legend>Registration Form</legend>
                                 {% csrf_token %}
                                 {% load crispy_forms_tags %}
                                 {% crispy userform %}
-                                </fieldset>
-                                <button type="submit" class="btn btn-default">Submit</button>
-                                </form>
+                                
+                                <button type="submit" class="btn btn-success">Register</button>
+                </form>
                 </div>  
 
 {% endblock %}
