--- a/outfit/templates/user_auth/userdetails_form.html
+++ b/outfit/templates/user_auth/userdetails_form.html
@@ -20,11 +20,11 @@
 <div class="row">
     <div class="col-md-offset-3 col-md-6">
         <h3><u>Complete the user details</u></h3>
-        <form role="form"  method="post" action="/auth/userdetails/" enctype="multipart/form-data">
+        <form role="form"  method="post" enctype="multipart/form-data">
             <fieldset>
                 {% csrf_token %}
-                {% load crispy_forms_tags %}
-                {% crispy userdetails%}
+               {% load crispy_forms_tags %}
+                {% crispy form %}
             </fieldset>
             <button type="submit" class="btn btn-success">Complete</button>
         </form>
