added datetimepicker.css and bootstrap-datetimepicker.js to static files

--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -16,10 +16,11 @@
     <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/dashboard.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/main.css" rel="stylesheet">
+    <link href="{{ STATIC_URL}}css/datetimepicker.css" rel="stylesheet">
     <!--javascript/jquery links-->
     <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
     <script src="{{STATIC_URL}}js/placeautocomplete.js"></script>
-    {%block link%}{%endblock%}
+    <script src="{{STATIC_URL}}js/bootstrap-datetimepicker.js"></script>
     <!--Google API-->
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
