--- a/outfit/templates/user_auth/user_activity.html
+++ b/outfit/templates/user_auth/user_activity.html
@@ -42,11 +42,13 @@
             </table>
             <p>
                 <h3>Weather Predicitions</h3>
+                {% for weather in weather_st%}
                 <h4>Condition: {{weather.text}} <br/> tempratures: {{weather.temp}}
                 <br/> Date: {{weather.date}}</h4>
                 <img src="{{weather.image }}"/>
                 <br/>
-                {{weather}}
+            {%endfor%}
+            {{weather_st}}
             </p>
            
         </div>
