--- a/outfit/templates/user_auth/userdetails_form.html
+++ b/outfit/templates/user_auth/userdetails_form.html
@@ -19,14 +19,14 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6">
-        <h3><u>Complete the user details</u></h3>
+        <h3><u>Update user details</u></h3>
         <form role="form"  method="post" enctype="multipart/form-data">
             <fieldset>
                 {% csrf_token %}
                {% load crispy_forms_tags %}
                 {% crispy form %}
             </fieldset>
-            <button type="submit" class="btn btn-success">Complete</button>
+            <button type="submit" class="btn btn-success">Update</button>
         </form>
         
     </div>
