add default profile pic functionality

--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -21,6 +21,7 @@
     <script src="{{STATIC_URL}}js/bootstrap.min.js"></script>
     <script src="{{STATIC_URL}}js/placeautocomplete.js"></script>
     <script src="{{STATIC_URL}}js/bootstrap-datetimepicker.js"></script>
+    <script src="{{STATIC_URL}}js/jquery.slides.min.js"></script>
     <!--Google API-->
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
@@ -123,28 +124,28 @@
                   
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
-                      <div class="item active">
-                        <img src="{% static 'images/jumper.jpg' %}" alt="...">
+                      <div class="item active center-block">
+                        <img src="{% static 'images/jumper.jpg' %}" alt="" height='150px' width='400px'>
                         <div class="carousel-caption">
                           Jumper
                         </div>
                       </div>
-                      <div class="item">
-                        <img src="{% static 'images/daphnea.jpg' %}" alt="...">
+                      <div class="item " >
+                        <img src="{% static 'images/daphnea.jpg' %}" alt="" height='150px' width='400px' >
                         <div class="carousel-caption">
                         Brouse
                         </div>
                       </div>
                       
                       <div class="item">
-                        <img src="{% static 'images/daphnea1.jpg' %}" alt="...">
+                        <img src="{% static 'images/daphnea1.jpg' %}" alt="" height='150px' width='400px'>
                         <div class="carousel-caption">
                         Daphnea
                         </div>
                       </div>
                       
                       <div class="item">
-                        <img src="{% static 'images/chefammel.jpg' %}" alt="...">
+                        <img src="{% static 'images/chefammel.jpg' %}" alt="" height='150px' width='400px'>
                         <div class="carousel-caption">
                         Daphnea
                         </div>
@@ -176,4 +177,4 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
    <!--<script src="{{STATIC_URL}}/js/ie10-viewport-bug-workaround.js"></script>-->
   </body>
-</html>p
+</html>
