--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -53,7 +53,7 @@
             {% if user.is_authenticated %}
             <li><a href="{% url 'index' %}">Day's Outfit</a></li>
             <li> <a href="{% url 'trya' %}">MyCloset</a></li>
-            <li><a href="{% url 'closet_upload' %}">UploadToMyCloset</a></li>
+            <li><a href="{% url 'closet_upload' %}">Upload</a></li>
             <li><a href="{% url 'user_activities' %}">Activities</a></li>
             <li><a href="{% url 'add_user_activity' %}">Add Activity</a></li>
            <li><a href="{% url 'trya' %}"> {{user.username}} </a></li>
