--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -6,13 +6,13 @@
 {% block body_block %}
      <h1 class='text-info'>Day's Outfit</h1>
     {% if messages %}
-        <ul class="messages success">
+        <ul class="messages bg-info">
         {% for message in messages %}
         <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>
             {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
                 <span class="glyphicon glyphicon-warning-sign text-error bg-danger" aria-hidden="true"> {{ message }}</span>
                 {%else%}
-                    <span class="glyphicon glyphicon-info-sign text-success bg-info" aria-hidden="true"> {{ message }}</span>
+                    <span class="glyphicon glyphicon-info-sign text-success" aria-hidden="true"> {{ message }}</span>
             {% endif %}
             
             </p>
@@ -31,7 +31,7 @@
             <img src="{{ cloth.cloth_image.url }}" class='img-rounded' alt="{{cloth.cloth_description}}" />
             </a>
             <p class="text-center"> <strong><i> {{cloth.cloth_description }} </i> </strong> </p>
-        
+        {{data}}
         </div>
         {% endfor %}
     </div>
