--- a/outfit/templates/user_auth/update_cloth_facts.html
+++ b/outfit/templates/user_auth/update_cloth_facts.html
@@ -4,7 +4,7 @@
 
 {% if user.is_authenticated %}
     {% if messages %}
-        <ul class="messages success">
+        <ul class="messages bg-info">
         {% for message in messages %}
             <div class="text-success bg-info">
                  <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>
