--- a/outfit/templates/user_auth/userdetails.html
+++ b/outfit/templates/user_auth/userdetails.html
@@ -7,7 +7,7 @@
 
 {% if user.is_authenticated %}
     {% if messages %}
-        <ul class="messages">
+        <ul class="messages bg-info">
             {% for message in messages %}
             <p {% if message.tags %} class="{{ message.tags }} text-success"{% endif %}>
                 <span class="glyphicon glyphicon-info-sign" aria-hidden="true">
