moved functionalities from outfitofday to the knowledge engine

--- a/outfit/templates/user_auth/index.html
+++ b/outfit/templates/user_auth/index.html
@@ -31,7 +31,7 @@
             <img src="{{ cloth.cloth_image.url }}" class='img-rounded' alt="{{cloth.cloth_description}}" />
             </a>
             <p class="text-center"> <strong><i> {{cloth.cloth_description }} </i> </strong> </p>
-        {{data}}
+        {{selection|upper}}
         </div>
         {% endfor %}
     </div>
