Added a job Interview cloths rule in outfit female

--- a/outfit/templates/user_auth/user_activity.html
+++ b/outfit/templates/user_auth/user_activity.html
@@ -18,12 +18,14 @@
         <div class=''>
             <table class='table table-responsive table-stripped table-hover '>
                 <thead>
+                    <i><strong>
                     <td>Category</td>
                     <td>Event</td>
                     <td>Location</td>
                     <td>Date</td>
                     <td>Start Time</td>
                     <td>End Time</td>
+                    </strong></i>
                 </thead>
                 
                 {% for item in activities %}
