--- a/outfit/templates/user_auth/base.html
+++ b/outfit/templates/user_auth/base.html
@@ -101,7 +101,7 @@
                 {% if user.is_superuser %}
                 <a href="/admin/">Admin Panel</a> <br />
               {%endif %}
-                <div class="text-danger">
+                <div>
                   <span>
                   <label> First Name:</label> <br/>
                   <span class='text-warning'>{{user.first_name|capfirst}} </span> <br/>
